--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "puppeteer": "^21.0.2",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-recaptcha": "^3.6.8",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "express-fileupload": "^1.4.0",
+    "pdf-parse": "^1.1.1"
   }
 }
